calc no VanillaTilt

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <br>
   <button id="clear">CLEAR</button>
 </div>
-<script type="text/javascript" src="script/vanilla-tilt.js"></script>
+<!--<script type="text/javascript" src="script/vanilla-tilt.js"></script>-->
 <script src="script/script.js"></script>
 
 </body>
